# lab-orchestrator

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
examples/: experiment_template.py  sweep.py  tmux_example.py
examples/sklearn_digits/: launch.py  train.py
examples/sweep/: experiments.yaml  sweep.py  train.py
lab_orchestrator/: __init__.py  __main__.py  _fmt.py  gpu.py  progress.py  resume.py  scheduler.py  seed.py  task.py  tmux.py  worker.py
tests/: test_lab_orchestrator.py
