[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-orchestrator"
version = "1.0.0"
description = "Lightweight single-node GPU experiment scheduler with LPT ordering and load-aware dispatch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["gpu", "scheduler", "experiment", "research", "deep-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

# Zero hard dependencies - only stdlib.
dependencies = []

[project.optional-dependencies]
gpu = ["torch>=2.0"]
yaml = ["pyyaml>=6.0"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.0", "flake8>=7.0", "types-PyYAML>=6.0", "pyyaml>=6.0"]

[project.scripts]
lab-orchestrator = "lab_orchestrator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["lab_orchestrator"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
